[metadata]
name = python_huawei_push_admin
version = 1.0.0
description = The Huawei Admin Python SDK enables server-side (backend) Python developers to integrate Huawei into their services and applications.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/TralahM/python_huawei_push_admin
author = Tralah M Brian
author_email = briantralah@gmail.com
license = APACHE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

project_urls =
    Source = https://github.com/TralahM/python_huawei_push_admin
    Tracker = https://github.com/TralahM/python_huawei_push_admin/issues
    Documentation = https://github.com/TralahM/python_huawei_push_admin

[options]
include_package_data = true
packages = find:
install_requires =

    requests

[options.extras_require]
docs=
    sphinx
    sphinx-automodapi
[options.entry_points]
console_scripts =



